style: about image tweak to fix mobile header line. Hide resume images on mobile

--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -53,6 +53,7 @@
 		&--rounded {
 			border: 10px solid var(--color-link-text);
 			border-radius: 50%;
+			display: block;
 			height: 250px;
 			margin-top: 3rem;
 			width: 250px;
